force-app/main/default/objects/Questionnaire__c/fields/CML_Constr_Purpose__c.field-meta.xml
<CustomField>
    <fullName>CML_Constr_Purpose__c</fullName>
    <label>Construction Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resell</fullName>
            </value>
            <value>
                <fullName>Hold as Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>