force-app/main/default/objects/Questionnaire__c/fields/CML_Location__c.field-meta.xml
<CustomField>
    <fullName>CML_Location__c</fullName>
    <inlineHelpText>Select whether the Borrower is located in Massachusetts or New Hampshire, Elsewhere in New England or New York, or Out of Area or Nationwide.</inlineHelpText>
    <label>Borrower Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MA-NH</fullName>
                <label>Massachusetts/New Hampshire</label>
            </value>
            <value>
                <fullName>NE-NY</fullName>
                <label>Other New England/New York</label>
            </value>
            <value>
                <fullName>Outside</fullName>
                <label>Out of Area/National</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>