force-app/main/default/objects/Questionnaire__c/fields/Construction_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Construction_Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Construction Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>