force-app/main/default/objects/Questionnaire__c/fields/Have_you_GC_d_a_project_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Have_you_GC_d_a_project_in_the_past__c</fullName>
    <label>Have you GC’d a project in the past?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>