force-app/main/default/objects/Questionnaire__c/fields/How_is_your_credit__c.field-meta.xml
<CustomField>
    <fullName>How_is_your_credit__c</fullName>
    <label>How is your credit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>