force-app/main/default/objects/Questionnaire__c/fields/How_many_units_are_in_the_property__c.field-meta.xml
<CustomField>
    <fullName>How_many_units_are_in_the_property__c</fullName>
    <label>How many units are in the property?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>