force-app/main/default/objects/Questionnaire__c/fields/How_quickly_do_you_need_to_close__c.field-meta.xml
<CustomField>
    <fullName>How_quickly_do_you_need_to_close__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How quickly do you need to close?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>