force-app/main/default/objects/Questionnaire__c/fields/If_a_purchase_do_you_have_PA_or_BOS__c.field-meta.xml
<CustomField>
    <fullName>If_a_purchase_do_you_have_PA_or_BOS__c</fullName>
    <label>If a purchase, do you have PA or BOS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>