force-app/main/default/objects/Questionnaire__c/fields/If_refinance_who_currently_holds_loan__c.field-meta.xml
<CustomField>
    <fullName>If_refinance_who_currently_holds_loan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>If refinance, who currently holds loan?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>