force-app/main/default/objects/Questionnaire__c/fields/Lead_and_Referral__c.field-meta.xml
<CustomField>
    <fullName>Lead_and_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead and Referral</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>