force-app/main/default/objects/Questionnaire__c/fields/Number_of_years_in_business__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_in_business__c</fullName>
    <label>Number of years in business?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>