force-app/main/default/objects/Questionnaire__c/fields/Owner_Occupied_51_or_investment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupied_51_or_investment__c</fullName>
    <label>Owner Occupied (&gt; 51%) or investment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>