force-app/main/default/objects/Questionnaire__c/fields/Purchase_or_refinance_of_existing_loan__c.field-meta.xml
<CustomField>
    <fullName>Purchase_or_refinance_of_existing_loan__c</fullName>
    <label>Purchase or refinance of existing loan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>