force-app/main/default/objects/Questionnaire__c/fields/Title_held_under_person_or_business__c.field-meta.xml
<CustomField>
    <fullName>Title_held_under_person_or_business__c</fullName>
    <label>Title held under person or business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>