force-app/main/default/objects/Questionnaire__c/fields/Type_of_Loan_Products_that_Interest_you__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan_Products_that_Interest_you__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Loan Products that Interest you?</label>
    <type>TextArea</type>
</CustomField>