force-app/main/default/objects/Questionnaire__c/fields/Vehicle_details_Year_Make_Model_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_details_Year_Make_Model_Mileage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle details: Year/Make/Model/Mileage</label>
    <type>TextArea</type>
</CustomField>