force-app/main/default/objects/Questionnaire__c/fields/What_is_your_timing_on_obtaining_a_loan__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_timing_on_obtaining_a_loan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What is your timing on obtaining a loan?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>