force-app/main/default/objects/Questionnaire__c/fields/What_size_loan_are_you_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_size_loan_are_you_looking_for__c</fullName>
    <label>What size loan are you looking for?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>