force-app/main/default/objects/Questionnaire__c/fields/What_type_of_company_are_you__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_company_are_you__c</fullName>
    <label>What type of company are you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>S Corp</fullName>
            </value>
            <value>
                <fullName>C Corp</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>