force-app/main/default/objects/Questionnaire__c/fields/What_type_of_Industry__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_Industry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What type of Industry?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>