force-app/main/default/objects/Questionnaire__c/fields/What_type_of_property__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_property__c</fullName>
    <label>What type of property?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multifamily</fullName>
                <default>true</default>
                <label>Multifamily</label>
            </value>
            <value>
                <fullName>Mixed use</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>