force-app/main/default/objects/Questionnaire__c/fields/What_type_of_vehicle_are_you_purchasing__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_vehicle_are_you_purchasing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What type of vehicle are you purchasing?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>