force-app/main/default/objects/Questionnaire__c/fields/What_will_you_be_utilizing_funds_for__c.field-meta.xml
<CustomField>
    <fullName>What_will_you_be_utilizing_funds_for__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What will you be utilizing funds for?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>