force-app/main/default/objects/Questionnaire__c/fields/Worked_with_any_of_our_lenders_in_past__c.field-meta.xml
<CustomField>
    <fullName>Worked_with_any_of_our_lenders_in_past__c</fullName>
    <label>Worked with any of our lenders in past?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>