force-app/main/default/objects/Questionnaire__c/fields/Your_experience_with_construction__c.field-meta.xml
<CustomField>
    <fullName>Your_experience_with_construction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Your experience with construction?</label>
    <type>TextArea</type>
</CustomField>