force-app/main/default/objects/Questionnaire__c/recordTypes/Commercial_Lead_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lead_Questionnaire</fullName>
    <active>true</active>
    <label>Commercial Lead Questionnaire</label>
</RecordType>